[package]
name = "notify-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.139", features = ["derive"]}
serde_derive = "1.0.139"
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
