[package]
name = "notify-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
json = "0.12.4"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
percent-encoding = "2.1.0"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.139", features = ["derive"]}
serde_derive = "1.0.139"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
